# Tene-Back

./: .gitignore  Cargo.toml  Dockerfile  push.sh
docs/: checkout-api.md
migrations/: 20251101120000_create_brands.sql  20251102183300_products.sql  20251104141305_users.sql  20251115071936_email_codes.sql  20251120121523_product_images.sql  20251227175318_user_addresses.sql  20260118133448_enable_pg_trgm.sql  20260120083337_add_brand_column.sql  20260124085350_add_role_to_users.sql  20260128181559_add_extension_to_product_images.sql  20260129123351_add_enabled_in_products.sql  20260129140000_add_categories.sql  20260129150000_add_category_images.sql  20260129160000_remove_product_type.sql  20260221120000_create_orders.sql  20260222120000_add_product_snapshot_to_order_items.sql  20260225130000_products_brand_fk.sql  20260301120000_add_quantity_to_product_images.sql  20260301130000_add_color_to_order_items.sql  20260301140000_sync_product_quantity_trigger.sql  20260312120000_alter_phone_number_to_varchar.sql  20260317120000_add_operator_to_user_role.sql  20260321044009_product_views.sql  20260416120000_add_order_comment.sql  20260425120000_add_order_city_details.sql  20260430120000_add_cable_config.sql  20260502120000_search_perf_indexes.sql  20260511120000_create_cable_specs.sql  20260511130000_add_product_cable_type.sql  20260511140000_order_items_product_set_null.sql  20260515120000_create_tasks.sql  20260518120000_create_top_products.sql  20260521120000_create_product_seo.sql  20260521130000_product_views_index.sql  20260529120000_create_checkout_analytics.sql  (+4 more)
(+61 files in other folders)
