[package]
name = "tene-back"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
# panic = "abort"
strip = true

[dependencies]
# Web Framework & HTTP
axum = { version = "0.8.4", features = ["multipart"] }
http = "1.1.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
chrono = { version = "0.4.39", features = ["serde"] }
rust_decimal = "1.39.0"

# Authentication & Security
bcrypt = "0.17.1"
google-oauth = "1.11"
# jsonwebtoken = "9.3.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }

# Performance & Memory
jemallocator = "0.5"

# Utilities
dotenv = "0.15.0"

